--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
                 <nav class="nav">
                     <ul class="menu">
                         <li class="menu__item">
-                            <a href="" class="menu__link"><span class="menu__span">#</span>Общество</a>
+                            <a href="promo.html" class="menu__link"><span class="menu__span">#</span>Общество</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link"><span class="menu__span">#</span>В мире</a>
+                            <a href="promo.html" class="menu__link"><span class="menu__span">#</span>В мире</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link"><span class="menu__span">#</span>Политика</a>
+                            <a href="promo.html" class="menu__link"><span class="menu__span">#</span>Политика</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link"><span class="menu__span">#</span>Шоу-бизнес</a>
+                            <a href="promo.html" class="menu__link"><span class="menu__span">#</span>Шоу-бизнес</a>
                         </li>
                         <li class="menu__item">
-                            <a href="" class="menu__link"><span class="menu__span">#</span>Здоровье</a>
+                            <a href="promo.html" class="menu__link"><span class="menu__span">#</span>Здоровье</a>
                         </li>
                     </ul>
                 </nav>
                 <div class="header__info">
-                    <a href="" class="search"><img src="images/search.svg" alt=""></a>
+                    <a href="promo.html" class="search"><img src="images/search.svg" alt=""></a>
                     <div class="currencies">
                         <div class="currency">
                             <span class="currency__name">usd</span> 58.21
@@ -49,7 +49,7 @@
     <main class="main">
         <div class="container">
             <div class="content content_first">
-                <a href="" class="item item__first">
+                <a href="promo.html" class="item item__first">
                     <img src="images/image1.jpg" alt="" class="item__image item__image_first">
                     <div class="item__inner">
                         <div class="chapter-item">
@@ -59,7 +59,7 @@
                         <span class="date-main"><span class="item-date">06 июн. 2020</span> <span class="item-time">14:37</span></span>
                     </div>
                 </a>
-                <a href="" class="item item__second">
+                <a href="promo.html" class="item item__second">
                     <div class="item-image">
                         <img src="images/image2.jpeg" alt="" class="item__image item__image_second">
                         <span class="chapter chapter_bottom">В мире</span>
@@ -67,7 +67,7 @@
                     <h2 class="title">Врачи Италии сделали шокирующее заявление о самоуничтожении COVID-19</h2>
                     <p class="date"><span class="item-date">04 июн. 2020</span> <span class="item-time">20:03</span></p>
                 </a>
-                <a href="" class="item item__second">
+                <a href="promo.html" class="item item__second">
                     <div class="item-image">
                         <img src="images/image10.jpg" alt="" class="item__image item__image_second">
                         <span class="chapter chapter_top">Шоу-бизнес</span>
@@ -80,7 +80,7 @@
                 <div class="content__inner">
                     <h2 class="content__title">Последние новости</h2>
                     <div class="content__wrapper">
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image2.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Общество</span>
@@ -88,7 +88,7 @@
                             <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                             <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                         </a>
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image3.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Шоу-бизнес</span>
@@ -96,7 +96,7 @@
                             <h2 class="title">Собчак застала Богомолова в постели с Бондарчуком </h2>
                             <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:18</span></p>
                         </a>
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image2.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Общество</span>
@@ -104,7 +104,7 @@
                             <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                             <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                         </a>
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image2.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Общество</span>
@@ -112,7 +112,7 @@
                             <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                             <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                         </a>
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image3.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Шоу-бизнес</span>
@@ -120,7 +120,7 @@
                             <h2 class="title">Собчак застала Богомолова в постели с Бондарчуком </h2>
                             <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:18</span></p>
                         </a>
-                        <a href="" class="item item_mrg">
+                        <a href="promo.html" class="item item_mrg">
                             <div class="item-image">
                                 <img src="images/image2.jpg" alt="" class="item__image item__image_picture">
                                 <span class="chapter chapter_bottom">Общество</span>
@@ -133,49 +133,49 @@
                 <aside class="aside">
                     <h2 class="content__title">Самое читаемое</h2>
                     <div class="aside__wrapper">
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
                                 <p class="aside__text">Несчастный случай? В Британии заговорили об утечке COVID из лаборатории</p>
                             </div>
                         </a>
-                        <a href="" class="aside-item">
+                        <a href="promo.html" class="aside-item">
                             <img src="images/image4.jpg" alt="" class="aside__image">
                             <div class="aside__inner">
                                 <h3 class="aside__title">В мире</h3>
@@ -186,7 +186,7 @@
                 </aside>
             </div>
             <div class="content content_wrap">
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
@@ -194,7 +194,7 @@
                     <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                     <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                 </a>
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
@@ -202,7 +202,7 @@
                     <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                     <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                 </a>
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
@@ -210,7 +210,7 @@
                     <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                     <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                 </a>
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
@@ -218,7 +218,7 @@
                     <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                     <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                 </a>
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
@@ -226,7 +226,7 @@
                     <h2 class="title">Важная новость: когда и у кого пенсия вырастет до 19,3 тыс. рублей </h2>
                     <p class="date"><span class="item-date">08 нояб. 2020</span> <span class="item-time">08:03</span></p>
                 </a>
-                <a href="" class="item item_mrg">
+                <a href="promo.html" class="item item_mrg">
                     <div class="item-image">
                         <img src="images/image2.jpg" alt="" class="item__image item__image_image">
                         <span class="chapter chapter_bottom">Общество</span>
