--- a/full.html
+++ b/full.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Yandex.RTB -->
+    <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <!-- Yandex.RTB end -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMN24</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Yandex.RTB R-A-584591-1 -->
+    <div id="yandex_rtb_R-A-584591-1"></div>
+    <script>
+        window.yaContextCb.push(()=>{
+        Ya.Context.AdvManager.render({
+            renderTo: 'yandex_rtb_R-A-584591-1',
+            blockId: 'R-A-584591-1'
+        })
+        })
+    </script>
+    <!-- Yandex.RTB R-A-584591-1 end -->
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -51,6 +67,28 @@
             <div class="content content_wrap">
                 <aside class="preview-aside">
                     <h2 class="preview__title">Последние новости</h2>
+                    <div class="preview-aside__inner preview-aside__inner_new">
+                        <div class="new">
+                            <p class="new__number">1</p>
+                            <p class="new__text">Чем занялся в Москве изгнанный с российского ТВ Ковтун</p>
+                        </div>
+                        <div class="new">
+                            <p class="new__number">2</p>
+                            <p class="new__text">Чем занялся в Москве изгнанный с российского ТВ Ковтун</p>
+                        </div>
+                        <div class="new">
+                            <p class="new__number">3</p>
+                            <p class="new__text">Чем занялся в Москве изгнанный с российского ТВ Ковтун</p>
+                        </div>
+                        <div class="new">
+                            <p class="new__number">4</p>
+                            <p class="new__text">Чем занялся в Москве изгнанный с российского ТВ Ковтун</p>
+                        </div>
+                        <div class="new">
+                            <p class="new__number">5</p>
+                            <p class="new__text">Чем занялся в Москве изгнанный с российского ТВ Ковтун</p>
+                        </div>
+                    </div>
                     <div class="preview-aside__inner">
                         <div class="preview-aside__block preview-aside__block_full">
                             <img src="images/image6.jpg" alt="" class="preview-aside__image">
@@ -95,6 +133,16 @@
                     </div>
                 </aside>
                 <div class="preview">
+                    <div class="preview-mob">
+                        <a href="full.html" class="preview__block">
+                            <img src="images/image11.jpg" alt="" class="preview__image">
+                            <p class="preview__text">Путин подписал указ о единовременной выплате россиянам</p>
+                        </a>
+                        <a href="full.html" class="preview__block">
+                            <img src="images/image11.jpg" alt="" class="preview__image">
+                            <p class="preview__text">Путин подписал указ о единовременной выплате россиянам</p>
+                        </a>
+                    </div>
                     <div class="preview__main">
                         <div class="preview-item preview-item_full">
                             <p class="preview-item__title preview-item__title_full">Врачи Италии сделали шокирующее заявление о самоуничтожении COVID-19</p>
@@ -162,7 +210,7 @@
                     </div>
                 </div>
                 <aside class="preview-aside preview-aside_second">
-                    <h2 class="preview__title">Новости партнеров</h2>
+                    <h2 class="preview__title">Самое читаемое</h2>
                     <div class="preview-aside__inner">
                         <div class="preview-aside__block preview-aside__block_full">
                             <img src="images/image6.jpg" alt="" class="preview-aside__image">
