--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMN24</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -31,6 +32,10 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="burger">
+                    <img src="images/menu-icon.svg" class="burger__image openMobileMenu show"> 
+                    <img src="images/menu-close-icon.svg" class="burger__image closeMobileMenu hide">
+                </div>
                 <div class="header__info">
                     <a href="promo.html" class="search"><img src="images/search.svg" alt=""></a>
                     <div class="currencies">
@@ -245,5 +250,7 @@
             <p class="footer__text">© SMN24.COM 2022</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
