--- a/promo.html
+++ b/promo.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <!-- Yandex.RTB -->
-    <script>window.yaContextCb=window.yaContextCb||[]</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <!-- <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script> -->
     <!-- Yandex.RTB end -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +11,11 @@
     <title>SMN24</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <script async src="https://rqnvci.com/oqt1l7/291vil/0pm03yqh8867vqu867kyprq6.php"></script>
 </head>
 <body>
     <!-- Yandex.RTB R-A-584591-1 -->
-    <div id="yandex_rtb_R-A-584591-1"></div>
+    <!-- <div id="yandex_rtb_R-A-584591-1"></div>
     <script>
         window.yaContextCb.push(()=>{
         Ya.Context.AdvManager.render({
@@ -22,8 +23,9 @@
             blockId: 'R-A-584591-1'
         })
         })
-    </script>
+    </script> -->
     <!-- Yandex.RTB R-A-584591-1 end -->
+    <div data-la-block="1304d476-2932-4d88-9668-58d5331686fd"></div>
     <header class="header">
         <div class="container">
             <div class="header__inner">
